# weather

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  release.yaml  test.yaml  verify.yaml
src/: configuration.rs  main.rs
src/api/: mod.rs  openweather.rs  weatherapi.rs
src/api/openweather/: mod.rs  models.rs  provider.rs
src/api/weatherapi/: models.rs  provider.rs
