[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Andrii D"]
description = "Weather CLI application for Windows/Linux/macOS"

[dependencies]
clap = { version = "3.1.9", features = ["derive", "cargo"] }
exitcode = "1.1.2"
whoami = "1.2.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"